monitoring/k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-trabalho-sd-ingress
  namespace: monitoring
spec:
  rules:
    - host: monitoring-grafana-trabalho-sd.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
